trunk/Archive2/2d/c1a2495f53c15a/output
main.cpp:5:12: error: a space is required between consecutive right angle brackets (use '> >')
    S<S<int>> s;   
           ^~
           > >
main.cpp:6:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
2 errors generated.
