trunk/Archive2/2d/c1a2495f53c15a/main.cpp
template<typename>
struct S {};

int main() {
    S<S<int>> s;   
}